[4989923] Comparação com laudo anterior

--- a/coi-management-web/src/main/webapp/index.html
+++ b/coi-management-web/src/main/webapp/index.html
@@ -431,6 +431,7 @@
 					<th>Densidade</th>
 					<th>T-score</th>
 					<th>Z-score</th>
+					<th></th>
 				</tr>
 			</thead>
 			<tbody>
@@ -447,24 +448,49 @@
 					<td><input type="text" name="colunaLombarDensidade"/></td>
 					<td><input type="text" name="colunaLombarTScore"/></td>
 					<td><input type="text" name="colunaLombarZScore"/></td>
+					<td></td>
+				</tr>
+				<tr class="coi-cell-item coi-exame-anterior">
+					<td>
+						<div>
+							<label><input type="checkbox" name="colunaLombarL1Ant" disabled="disabled"> L1</label>
+							<label><input type="checkbox" name="colunaLombarL2Ant" disabled="disabled"> L2</label>
+							<label><input type="checkbox" name="colunaLombarL3Ant" disabled="disabled"> L3</label>
+							<label><input type="checkbox" name="colunaLombarL4Ant" disabled="disabled"> L4</label>
+						</div>
+					</td>
+					<td><input type="text" name="colunaLombarDensidadeAnt" disabled="disabled"/></td>
+					<td><input type="text" name="colunaLombarTScoreAnt" disabled="disabled"/></td>
+					<td><input type="text" name="colunaLombarZScoreAnt" disabled="disabled"/></td>
+					<td><input type="text" name="colunaLombarRazaoAnt" disabled="disabled"/></td>
 				</tr>
 				<tr class="coi-cell-item">
 					<td>Colo Fêmur</td>
 					<td><input type="text" name="coloFemurDensidade"/></td>
 					<td><input type="text" name="coloFemurTScore"/></td>
 					<td><input type="text" name="coloFemurZScore"/></td>
+					<td></td>
 				</tr>
 				<tr class="coi-cell-item">
 					<td>Fêmur Total</td>
 					<td><input type="text" name="femurTotalDensidade"/></td>
 					<td><input type="text" name="femurTotalTScore"/></td>
 					<td><input type="text" name="femurTotalZScore"/></td>
+					<td></td>
+				</tr>
+				<tr class="coi-cell-item coi-exame-anterior">
+					<td></td>
+					<td><input type="text" name="femurTotalDensidadeAnt" disabled="disabled"/></td>
+					<td><input type="text" name="femurTotalTScoreAnt" disabled="disabled"/></td>
+					<td><input type="text" name="femurTotalZScoreAnt" disabled="disabled"/></td>
+					<td><input type="text" name="femurTotalRazaoAnt" disabled="disabled"/></td>
 				</tr>
 				<tr class="coi-cell-item">
 					<td>Rádio 33%</td>
 					<td><input type="text" name="radioTercoDensidade"/></td>
 					<td><input type="text" name="radioTercoTScore"/></td>
 					<td><input type="text" name="radioTercoZScore"/></td>
+					<td></td>
 				</tr>
 			</tbody>
 		</table>
@@ -481,6 +507,7 @@
 					<th width="60%">Local</th>
 					<th>Densidade</th>
 					<th>Z-score</th>
+					<th></th>
 				</tr>
 			</thead>
 			<tbody>
@@ -496,26 +523,50 @@
 					</td>
 					<td><input type="text" name="colunaLombarDensidade"/></td>
 					<td><input type="text" name="colunaLombarZScore"/></td>
+					<td></td>
+				</tr>
+				<tr class="coi-cell-item coi-exame-anterior">
+					<td>
+						<div>
+							<label><input type="checkbox" name="colunaLombarL1Ant" disabled="disabled"> T1</label>
+							<label><input type="checkbox" name="colunaLombarL2Ant" disabled="disabled"> T2</label>
+							<label><input type="checkbox" name="colunaLombarL3Ant" disabled="disabled"> T3</label>
+							<label><input type="checkbox" name="colunaLombarL4Ant" disabled="disabled"> T4</label>
+						</div>
+					</td>
+					<td><input type="text" name="colunaLombarDensidadeAnt" disabled="disabled"/></td>
+					<td><input type="text" name="colunaLombarZScoreAnt" disabled="disabled"/></td>
+					<td><input type="text" name="colunaLombarRazaoAnt" disabled="disabled"/></td>
 				</tr>
 				<tr class="coi-cell-item">
 					<td>Colo Fêmur</td>
 					<td><input type="text" name="coloFemurDensidade"/></td>
 					<td><input type="text" name="coloFemurZScore"/></td>
+					<td></td>
 				</tr>
 				<tr class="coi-cell-item">
 					<td>Fêmur Total</td>
 					<td><input type="text" name="femurTotalDensidade"/></td>
 					<td><input type="text" name="femurTotalZScore"/></td>
+					<td></td>
+				</tr>
+				<tr class="coi-cell-item  coi-exame-anterior">
+					<td></td>
+					<td><input type="text" name="femurTotalDensidadeAnt" disabled="disabled"/></td>
+					<td><input type="text" name="femurTotalZScoreAnt" disabled="disabled"/></td>
+					<td><input type="text" name="femurTotalRazaoAnt" disabled="disabled"/></td>
 				</tr>
 				<tr class="coi-cell-item">
 					<td>Rádio 33%</td>
 					<td><input type="text" name="radioTercoDensidade"/></td>
 					<td><input type="text" name="radioTercoZScore"/></td>
+					<td></td>
 				</tr>
 				<tr class="coi-cell-item">
 					<td>Corpo Inteiro</td>
 					<td><input type="text" name="corpoInteiroDensidade"/></td>
 					<td><input type="text" name="corpoInteiroZScore"/></td>
+					<td></td>
 				</tr>
 			</tbody>
 		</table>
