[4989923] Correções de impressão de laudo e da fórmula de comparação de densidade

--- a/coi-management-web/src/main/webapp/index.html
+++ b/coi-management-web/src/main/webapp/index.html
@@ -515,10 +515,10 @@
 					<td>
 						<span>Coluna Lombar</span>
 						<div>
-							<label><input type="checkbox" name="colunaLombarL1"> T1</label>
-							<label><input type="checkbox" name="colunaLombarL2"> T2</label>
-							<label><input type="checkbox" name="colunaLombarL3"> T3</label>
-							<label><input type="checkbox" name="colunaLombarL4"> T4</label>
+							<label><input type="checkbox" name="colunaLombarL1"> L1</label>
+							<label><input type="checkbox" name="colunaLombarL2"> L2</label>
+							<label><input type="checkbox" name="colunaLombarL3"> L3</label>
+							<label><input type="checkbox" name="colunaLombarL4"> L4</label>
 						</div>
 					</td>
 					<td><input type="text" name="colunaLombarDensidade"/></td>
@@ -528,10 +528,10 @@
 				<tr class="coi-cell-item coi-exame-anterior">
 					<td>
 						<div>
-							<label><input type="checkbox" name="colunaLombarL1Ant" disabled="disabled"> T1</label>
-							<label><input type="checkbox" name="colunaLombarL2Ant" disabled="disabled"> T2</label>
-							<label><input type="checkbox" name="colunaLombarL3Ant" disabled="disabled"> T3</label>
-							<label><input type="checkbox" name="colunaLombarL4Ant" disabled="disabled"> T4</label>
+							<label><input type="checkbox" name="colunaLombarL1Ant" disabled="disabled"> L1</label>
+							<label><input type="checkbox" name="colunaLombarL2Ant" disabled="disabled"> L2</label>
+							<label><input type="checkbox" name="colunaLombarL3Ant" disabled="disabled"> L3</label>
+							<label><input type="checkbox" name="colunaLombarL4Ant" disabled="disabled"> L4</label>
 						</div>
 					</td>
 					<td><input type="text" name="colunaLombarDensidadeAnt" disabled="disabled"/></td>
