[4989923] Campo Densidade Anterior editável para cálculo

--- a/coi-management-web/src/main/webapp/index.html
+++ b/coi-management-web/src/main/webapp/index.html
@@ -459,7 +459,7 @@
 							<label><input type="checkbox" name="colunaLombarL4Ant" disabled="disabled"> L4</label>
 						</div>
 					</td>
-					<td><input type="text" name="colunaLombarDensidadeAnt" disabled="disabled"/></td>
+					<td><input type="text" name="colunaLombarDensidadeAnt"/></td>
 					<td><input type="text" name="colunaLombarTScoreAnt" disabled="disabled"/></td>
 					<td><input type="text" name="colunaLombarZScoreAnt" disabled="disabled"/></td>
 					<td><input type="text" name="colunaLombarRazaoAnt" disabled="disabled"/></td>
@@ -480,7 +480,7 @@
 				</tr>
 				<tr class="coi-cell-item coi-exame-anterior">
 					<td></td>
-					<td><input type="text" name="femurTotalDensidadeAnt" disabled="disabled"/></td>
+					<td><input type="text" name="femurTotalDensidadeAnt"/></td>
 					<td><input type="text" name="femurTotalTScoreAnt" disabled="disabled"/></td>
 					<td><input type="text" name="femurTotalZScoreAnt" disabled="disabled"/></td>
 					<td><input type="text" name="femurTotalRazaoAnt" disabled="disabled"/></td>
@@ -534,7 +534,7 @@
 							<label><input type="checkbox" name="colunaLombarL4Ant" disabled="disabled"> L4</label>
 						</div>
 					</td>
-					<td><input type="text" name="colunaLombarDensidadeAnt" disabled="disabled"/></td>
+					<td><input type="text" name="colunaLombarDensidadeAnt"/></td>
 					<td><input type="text" name="colunaLombarZScoreAnt" disabled="disabled"/></td>
 					<td><input type="text" name="colunaLombarRazaoAnt" disabled="disabled"/></td>
 				</tr>
@@ -552,7 +552,7 @@
 				</tr>
 				<tr class="coi-cell-item  coi-exame-anterior">
 					<td></td>
-					<td><input type="text" name="femurTotalDensidadeAnt" disabled="disabled"/></td>
+					<td><input type="text" name="femurTotalDensidadeAnt"/></td>
 					<td><input type="text" name="femurTotalZScoreAnt" disabled="disabled"/></td>
 					<td><input type="text" name="femurTotalRazaoAnt" disabled="disabled"/></td>
 				</tr>
