[4989923] NPE para Cadastro de Laudo pré-menopuasal com opção "Dentro do Esperado para a idade"

--- a/coi-management-web/src/main/webapp/index.html
+++ b/coi-management-web/src/main/webapp/index.html
@@ -394,7 +394,7 @@
 			<option value="Normal">1 - Normal</option>
 			<option value="Osteopenia">2 - Osteopenia</option>
 			<option value="Osteoporose">3 - Osteoporose</option>
-			<option value="Dentro do eperado para a idade">4 - Dentro do eperado para a idade</option>
+			<option value="Dentro do esperado para a idade">4 - Dentro do esperado para a idade</option>
 			<option value="Baixa densidade óssea para a idade">5 - Baixa densidade óssea para a idade</option>
 		</select>
 	<dd>
