--- a/coi-management-web/src/main/webapp/index.html
+++ b/coi-management-web/src/main/webapp/index.html
@@ -391,11 +391,11 @@
 	<dd>
 		<select name="conclusao">
 			<option/>
-			<option value="Normal">1 - Normal</option>
-			<option value="Osteopenia">2 - Osteopenia</option>
-			<option value="Osteoporose">3 - Osteoporose</option>
-			<option value="Dentro do esperado para a idade">4 - Dentro do esperado para a idade</option>
-			<option value="Baixa densidade óssea para a idade">5 - Baixa densidade óssea para a idade</option>
+			<option value="Normal" class="pos-menopausa">1 - Normal</option>
+			<option value="Osteopenia" class="pos-menopausa">2 - Osteopenia</option>
+			<option value="Osteoporose" class="pos-menopausa">3 - Osteoporose</option>
+			<option value="Dentro do esperado para a idade" class="pre-menopausa">4 - Dentro do esperado para a idade</option>
+			<option value="Baixa densidade óssea para a idade" class="pre-menopausa">5 - Baixa densidade óssea para a idade</option>
 		</select>
 	<dd>
 </dl>
