[close-11077520] Inclusão de número de documento nos pagamentos

--- a/coi-management-web/src/main/webapp/index.html
+++ b/coi-management-web/src/main/webapp/index.html
@@ -690,6 +690,7 @@
 <div id="projecao">
 	<div data-attribute="projecao" class="coi-view-text" data-label="Projeção:" data-required="true"/>
 </div>
+<div data-attribute="documento" class="coi-view-text" data-label="Documento:"/>
 <dl class="coi-form-item">
 	<dt>Tipo:</dt>
 	<dd>
